--- a/gb/news392_5.md
+++ b/gb/news392_5.md
@@ -1,4 +1,9 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/fcjmkl2375/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san9658.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san9658.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san9658.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san9658.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san9658.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san9658.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>最新评论</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/fcjmkl2375/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fcjmkl2375/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fcjmkl2375/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/3/n11765346.md#1" target="_blank">陈思敏：危害甚于武汉肺炎不明病毒的是什么</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/3/n11765346.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/554c7c19817bf7c0d7ec272bb4dcd0af-150x120.jpg" align ="left"></a>中国湖北武汉出现“不明原因肺炎”在去年12月31日经官方证实至今，时过3天病源检测迟迟未有结果出炉，却已有8人因“传谣”被快速“精准”查处。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 5:42 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/3/n11764864.md#1" target="_blank">【名家专栏】川普减企业税为何令左派烦恼</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/3/n11764864.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/08/1107020341211758-150x120.jpg" align ="left"></a>让左派沮丧的是，过去两年，海外美国企业已回流超过一万亿美元的资金，而且还将有更多海外资金回流。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 5:41 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/3/n11765134.md#1" target="_blank">【名家专栏】改善地球环境 无需社会主义政策</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/3/n11765134.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1178402661-webcrop-1200x720-150x120.jpg" align ="left"></a>24岁的博扬·斯莱特（Boyan Slat）是“海洋清理”（Ocean Cleanup）公司的创始人兼首席执行官，该公司利用创新技术清除全球海洋及河流中的塑料垃圾。他是在自己的18岁的“高龄”时，在祖国荷兰创立了这一倡议组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 5:34 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/3/n11764938.md#1" target="_blank">新州：从违反程序看中共破坏司法公正</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/3/n11764938.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/06/1506232146352039-150x120.jpg" align ="left"></a>“走法律程序”，这是中共执法者对当事人及家属经常说的一句话，这个法律程序就是执法机关和办案人必须遵守的法定办案顺序、步骤，目的是维护当事人的合法权益，监护执法者的职守节操，维护人类司法公正，确保所办案件能经得起历史检验，但大陆没有司法独立，执法者嘴上喊“走法律程序”，却案案都在违反法律程序，程序接连违法，何谈司法公正？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 2:52 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/3/n11764613.md#1" target="_blank">袁斌：“小康年”将到，访民为何吊死在信访局</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/3/n11764613.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1-8-600x367-150x120.jpg" align ="left"></a>2019年12月31日早晨5:45分，山西省柳林县退役老兵余海平被发现吊死在山西省信访局大门上，令人唏嘘！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 2:39 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/30/n11754433.md#1" target="_blank">俞晓薇：明慧新年祝福值得中国和世界深思</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/30/n11754433.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2019-12-28-1912210523254535-150x120.jpg" align ="left"></a>岁末，祝福与感恩热潮再现于明慧网——中国大陆及海外的法轮功学员恭祝法轮功创始人李洪志大师新年快乐。众多学员的亲属等各界人士也发出贺信，感谢李洪志大师、感谢法轮功。在道德下滑、纷争动荡的今日，法轮大法正在从根本上净化人心、净化世界，意义深远。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 11:13 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/2/n11764288.md#1" target="_blank">东方觉：犯罪集团之恶与“保护伞”之黑</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/2/n11764288.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/d0d6-hyvnhqq0677385-800x450-1-150x120.jpg" align ="left"></a>最近，震惊全国的湖南新晃一中“操场埋尸案”被判，两名罪犯，一个死刑立即执行，一个死缓。沉冤16年的邓世平总算昭雪。有人说是“迟到的正义”，但此案令人叹息更在于，正义不该迟到，至少不该迟到这么久。一桩案情原本不复杂的案件，一桩当地很多人心知肚明的案件偏偏无法侦破，一拖16年。16年来，由于“保护伞”的违法庇护，罪犯杜少平.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 8:07 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/2/n11763805.md#1" target="_blank">【名家专栏】写在《五月花号公约》400周年</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/2/n11763805.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-51246962-150x120.jpg" align ="left"></a>2020年是《五月花号公约》（the Mayflower Compact）签署的400周年纪念年。该协议由41位朝圣先辈（Pilgrim Fathers）于1620年签署，是承载美国建国自治历史文件中的第一份。《五月花号公约》创建了一个先例，即政府是基于被统治者的许可而成立的，而且以法治国。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 7:12 AM			</td></tr>
@@ -20,12 +25,17 @@
 此时此刻，历史又将进入一个特殊的年轮，那就是2020年。接下来，人们早已习惯的传统记忆还将面临重新定义。因为，中华民族已进入了一个最黑暗的时期，在黎明到来之前，真理、真相、公平、正义都被邪恶所扭曲。下面让我.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 5:44 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/1/n11761161.md#1" target="_blank">周晓辉：上波罗的海两国黑名单 中南海再受挫</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/1/n11761161.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1577746380128-150x120.jpg" align ="left"></a>近日，据俄罗斯卫星通讯社报导，拉脱维亚国家安全局近期列出了该国在2020年主要安全威胁名单，除了俄罗斯和独联体国家外，中国（中共）也首次上榜。报导援引拉脱维亚媒体《波罗的海之声（Baltijas Blass）》的相关信息表示，安全局在一份报告中声称，以上国家的“情报部门的活动”在2020年将保持“不变的高水平”，并预测.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 5:42 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/1/n11761132.md#1" target="_blank">颜丹：中国“暴力伤医”为何异于全球</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/1/n11761132.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/3ae3a4cb58f224622c32e15a2a07d2a7-e1508124610232-150x120.jpg" align ="left"></a>中共是全人类的敌人。伤医、杀医事件若有一天遍布全球，那必定与中共脱不了干系，因为毁灭全人类正是中共的终极目的......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 3:32 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/1/n11760950.md#1" target="_blank">陈思敏：中共证监会带头违法 A股成中产掩埋场</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/1/n11760950.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1602192237312662-600x400-150x120.jpg" align ="left"></a>2019年的最后一天，中共证监会同意江苏苏州泽璟生物制药公司在科创板IPO注册，但在新版《证券法》2020年3月生效前，这明显违反了现行《证券法》。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 2:35 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/26/n11747470.md#1" target="_blank">为中共效力的红色特工 后来怎么样了（2）</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/26/n11747470.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/01/1201061932522039-150x120.jpg" align ="left"></a>英国爱丁堡大学研究院毕业的阎宝航，年轻时曾是基督教徒，后来研究马列主义和社会主义思想，由民主主义者转变成社会主义者。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 10:22 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/1/n11760402.md#1" target="_blank">陆言：医生被杀案是中共治下恶果的冰山一角</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/1/n11760402.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/12/1310271804532583-150x120.jpg" align ="left"></a>2019年12月4日北京民航医院急诊科接诊了一位95岁的老年女性，病史为脑梗塞后遗症。病人来院时呕吐、意识不清，随行家属拒绝一切检查，只要求“输液”。仅“输液”难以改善病情，于是家属恶意指责治疗有误，并开展了长达半个月的对医院的责骂，并拒绝医疗鉴定。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 7:10 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/1/n11759960.md#1" target="_blank">程晓容：惧《反渗透法》中共偷换焦点渲染恐怖</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/1/n11759960.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/420148-150x120.jpg" align ="left"></a>12月31日，台湾立法院会三读通过《反渗透法》，在台海两岸引发震荡。支持者表示欣慰，中共国台办和官媒进行抨击。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 7:03 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/1/n11760290.md#1" target="_blank">袁斌：香港花季少女之死告诉你中共有多邪</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/1/n11760290.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912010409301501-150x120.jpg" align ="left"></a>9月22日，香港15岁花季少女陈彦霖被发现浮尸海上后，警方放风是自杀，但种种疑点却使人怀疑是他杀。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 6:42 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/1/n11760118.md#1" target="_blank">颜智华：北京医生被杀 背后或掩盖医疗黑幕</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/1/n11760118.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2005/12/51201172533459-150x120.jpg" align ="left"></a>??2019年12月24日发生在北京民航总医院急诊部的杀害女医生杨文案件，凶手孙文斌55岁，是在该医院急诊部留诊了20天的95岁高龄女患者孙某氏的儿子。作案手段极其残忍血腥，用刀几乎割断了医生的脖颈。案件震惊了中国朝野上下。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 5:04 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/3/n11765043.md#1" target="_blank">85岁美籍台侨：阻碍两岸统一的是共产制度</a><br></h3>有人问我：“你愿意台湾与大陆统一，还是愿意台湾独立？”我对突如其来的问题没有作答。但稍加思考后，我问对方：“你愿意看到天安门大屠杀的悲剧也在台湾街头重演吗？”对方在问我：“那么你是赞成台湾独立吗？”我说：“如果你宣布台湾独立， 那不赞成台湾独立的人起来造反，你怎么办？”对方又说：“那你既不赞成台湾统一，也不赞成独立，那.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 3:17 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/3/n11764895.md#1" target="_blank">海网：龟蛇对鼠哭新愁</a><br></h3>长江见底现新洲，
+龟蛇对鼠哭新愁。
+不明肺炎从新冒，
+辟谣消声重新揪。
+瘟神似借新春运，
+恶党却蒙新盖头。
+非典悲剧如再演，
+恐有更多命白丢。
+天灭中共恩浩荡，
+魔拉陪葬雾浓稠。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 2:12 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/3/n11764415.md#1" target="_blank">林泉：香江之歌</a><br></h3>美丽香江城，雄伟狮子峰。
 九七落魔掌，从此无太平。
 中共施恶法，欲变红魔城。
@@ -65,6 +75,5 @@
 红朝内讧窝里斗
 暴政虐民积怨满......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 3:43 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/1/n11761144.md#1" target="_blank">王赫：习近平命运之择与三句古语</a><br></h3>又是一月一日。习近平的新年贺词，虽努力想有点个性，却依然是篇不敢直面现实的陈词滥调。古云：一元复始，万象更新。被党文化笼罩着的习，亟需找到“元”。找到“元”，自然“等闲识得东风面，万紫千红总是春”；找不到“元”，那就“望眼总为浮云遮”， 难免“身死人手，为天下笑”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 3:23 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/27/n11749214.md#1" target="_blank">李旭彤：挖掘五千年文明惊世宝藏（12）</a><br></h3>信息这个概念极大地简化了这个问题的讨论。对于一个基于近代科学的认知体系，有一个最基本的前提：认识者与被认识者之间要有信息的传递。在这个前提下的认知域主要受到三方面的限制：个体人接受信息，个体人对收到信息的处理，个体人之间信息的交换。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 6:24 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/fcjmkl2375/djy/blob/master/gb/news392_5.md#1<br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/fcjmkl2375/djy/blob/master/gb/news392_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_5.htm">http://www.epochtimes.com/gb/news392_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
